[package]
name = "dos"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-pickle = "0.6.2"
nalgebra = "0.24.1"
serde = { version = "1.0.123", features = ["derive"] }
paste = "1.0.4"
num-complex = "0.3.1"
rayon = "1.5.0"
fem = { git = "https://github.com/rconan/fem.git", branch = "main" }
log = "0.4.14"
simple_logger = "1.11.0"

[build-dependencies]
cc = "1.0.67"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
